--- a/ghost/i18n/locales/it/portal.json
+++ b/ghost/i18n/locales/it/portal.json
@@ -104,6 +104,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Assicurati che le email non finiscano per sbaglio nello spam. Se ce ne sono, clicca su \"Segnala come non spam\" e/o \"Sposta nella cartella Posta in arrivo\".",
     "Manage": "Impostazioni",
     "Maybe later": "Magari più tardi",
+    "Memberships from this email domain are currently restricted.": "",
     "Memberships unavailable, contact the owner for access.": "Iscrizione non disponibile, contatta il proprietario per accedere.",
     "month": "mese",
     "Monthly": "Mensile",
