--- a/ghost/i18n/locales/sv/portal.json
+++ b/ghost/i18n/locales/sv/portal.json
@@ -104,6 +104,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Verifiera att e-postmeddelandena inte hamnat i skräppostmappen. Om de gjort det, flytta dem till inkorgen och/eller markera som \"Ej skräppost\".",
     "Manage": "Hantera",
     "Maybe later": "Kanske senare",
+    "Memberships from this email domain are currently restricted.": "",
     "Memberships unavailable, contact the owner for access.": "Medlemskap inte tillgängligt. Kontakta ansvarig för webplatsen för tillgång.",
     "month": "månad",
     "Monthly": "Månadsvis",
