--- a/ghost/i18n/locales/sr-Cyrl/portal.json
+++ b/ghost/i18n/locales/sr-Cyrl/portal.json
@@ -104,6 +104,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Уверите се да мејлови случајно не завршавају у фасциклама за нежељену пошту или промоције у вашем сандучету. Ако јесу, кликните на „Означи као да није нежељено“ и/или „Премести у пријемно сандуче“.",
     "Manage": "Управљајте",
     "Maybe later": "Можда касније",
+    "Memberships from this email domain are currently restricted.": "",
     "Memberships unavailable, contact the owner for access.": "Чланства нису доступна, контактирајте власника ради приступа.",
     "month": "",
     "Monthly": "Месечно",
